# resvg-py

./: Cargo.toml  Pipfile  README.md  pyproject.toml
examples/: simple.py
src/: lib.rs
